  person 
  * phone book entries now have the additional fields "quickdial", "vanity", 
    "priority", "important"
  * now parsing the Fritz Box's phone book via xml export file (if available)
  * adapted local phonebook to use the same xml format, new FB versions use.
    Existing csv phone books are converted to xml automagically, entries 
    with TYPE_NONE are converted to TYPE_HOME
  * Updated OertlichesFonbook to website changes
  * Fixed parsing SIP provider names
  * Sensitive Information like passwords, phone numbers, etc. are no longer 
    logged by default.
  -> The new command line option --log-personal-info re-enables logging all 
    information
- Important changes in libtcpclient++
  * Fixed a possible issue with "thread-safety" of TcpClient, a TcpClient 
    object can now be deleted out of another thread while running
  -> This prevents possible crashes when closing KFritz
- Added menu entries for getting IP and reconnecting to ISP
- Added new columns to Fritz Box's phone book view 
- Moved ${GCRYPT_LIBRARIES} in CMakeLists.txt to support linking with 
  --as-needed (suggested by Richard Bos)
- Added README with installing instructions
- Makefile: Moved install target to kde-install and created install target 
  using sudo instead of kdesudo.
- Implemented "Copy number to clipboard", added entry to context menu
  (suggested by Richard Bos)
- Fixed project's home URL in KAboutData (reported by Richard Bos)
- Updated dutch translations (thanks to Richard Bos)
- Updated README with contribution instructions
- Modified displaying of phone books accordingly
- Reworked displaying of phone books
  * All numbers of a contact are shown in one line
  * Default numbers are shown in bold face
- Enabled editing of existing entries of writable phonebooks
- Changed color of incoming call icon to blue, to improve readability
  (suggested by Mark Peter Wege and Markus Haitzer)
- Set larger default size for log dialog