@@ -10,3 +10,4 @@ Contributors:
 * Tobias Roeser (alias lefou / kde-apps.org)
 * Mark Peter Wege <Mark@wege.eu>
 * Markus Haitzer <haitzer@gmx.net>
+* Christoph Rauch <christoph.rauch@gmx.de>
